# accountable-swarm

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  DISCLOSURE_LEDGER.md  Dockerfile  LICENSE  README.md  pyproject.toml
.codex/: HANDOFF.md  START_HERE.md
.codex/research/: README.md  north_star.yml  operating_model.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: go-gate.yml  hardening-followup.yml  public-claim.yml
.github/instructions/: accountable-swarm.instructions.md  trusted-core.instructions.md
.github/workflows/: local-gate.yml
accountable_swarm/: __init__.py  images.py  server.py  world_model.py
accountable_swarm/physical/: __init__.py  contract.py  so101.py
accountable_swarm/qwen/: __init__.py  bbox.py  client.py
accountable_swarm/qwenguard/: __init__.py  evaluator.py  json_extract.py  memory.py  outcome_gate.py  selector.py  traces.py  trial.py
accountable_swarm/swarm/: __init__.py  formations.py  hazard.py  mission.py  mission_choice.py  sim.py
accountable_swarm/trace/: __init__.py  models.py
docs/engineering/: alibaba-ecs-manual-deploy-2026-06-15.md  alibaba-proof-2026-06-14.md  animated-swarm-replay-2026-06-16.md  bounded-qwen-mission-choice-2026-06-17.md  camera-go-gate-2026-06-15.md  current-status-2026-06-15.md  dashboard-polish-dimos-export-2026-06-17.md  demo-recording-pack-2026-06-16.md  dimos-bridge-probe-2026-06-16.md  dimos-replay-consumer-2026-06-16.md  dimos-runtime-smoke-pack-2026-06-17.md  ecs-operator-proof-pack-2026-06-16.md  ecs-proof-review-helper-2026-06-29.md  ecs-smoke-proof-collector-2026-06-15.md  go-gate-2026-06-14.md  go-gate-p1-hardening-2026-06-15.md  go-gate-p2-packaging-2026-06-15.md  go-gate-p3-confidence-bbox-2026-06-16.md  hardening-policy.md  hazard-formation-gate-2026-06-16.md  hazard-formation-replay-pack-2026-06-16.md  interactive-replan-dashboard-2026-06-17.md  (+45 more)
fixtures/: clear_frame.ppm  hazard_marker.ppm
scripts/: __init__.py  audit_qwenguard_submission_readiness.py  build_swarm_demo_bundle.py  capture_so101_camera_frame.py  collect_dimos_runtime_smoke_report.py  collect_ecs_smoke_report.py  local_gate.sh  make_hazard_fixture.py  prepare_demo_recording_pack.py  prepare_dimos_bridge_pack.py  prepare_dimos_runtime_smoke_pack.py  prepare_ecs_operator_pack.py  prepare_ecs_proof_review.py  prepare_qwenguard_final_video_review.py  prepare_qwenguard_physical_go_pack.py  prepare_qwenguard_readiness_operator_pack.py  prepare_qwenguard_submission_pack.py  prepare_sensor_frame_proof_pack.py  prepare_so101_operator_probe_pack.py  prepare_so101_training_pack.py  prepare_world_model_dashboard_pack.py  qwen_model_ping.py  record_qwenguard_trial.py  render_swarm_trace_html.py  render_world_model_dashboard_html.py  run_camera_go_gate.py  run_dimos_replay_consumer.py  run_go_gate.py  run_hazard_formation_gate.py  run_qwenguard_memory_replay.py  run_qwenguard_no_motion_health_check.py  run_swarm_mission_gate.py  run_swarm_mission_suite.py  run_swarm_sim.py  run_swarm_suite.py  serve_demo.py  summarize_qwenguard_trials.py  verify_qwenguard_memory_replay.py  verify_swarm_mission_suite.py  verify_trace.py
tests/: test_camera_go_gate_cli.py  test_collect_dimos_runtime_smoke_report_cli.py  test_demo_recording_pack_cli.py  test_dimos_bridge_pack_cli.py  test_dimos_replay_consumer_cli.py  test_dockerfile.py  test_ecs_operator_pack_cli.py  test_ecs_smoke_report_cli.py  test_formation_mission_choice.py  test_go_gate_cli.py  test_hazard_formation_gate_cli.py  test_images.py  test_packaging.py  test_physical_contract.py  test_prepare_dimos_runtime_smoke_pack_cli.py  test_prepare_ecs_proof_review_cli.py  test_prepare_qwenguard_final_video_review_cli.py  test_qwen_bbox.py  test_qwen_client.py  test_qwen_model_ping_cli.py  test_qwenguard_evaluator.py  test_qwenguard_health_check_cli.py  test_qwenguard_memory.py  test_qwenguard_memory_replay_cli.py  test_qwenguard_outcome_gate.py  test_qwenguard_physical_go_pack_cli.py  test_qwenguard_readiness_operator_pack_cli.py  test_qwenguard_selector.py  test_qwenguard_submission_pack_cli.py  test_qwenguard_submission_readiness_audit_cli.py  test_qwenguard_traces.py  test_qwenguard_trial.py  test_record_qwenguard_trial_cli.py  test_sensor_frame_proof_pack_cli.py  test_server.py  test_so101_camera_capture_cli.py  test_so101_operator_probe_pack_cli.py  test_so101_training_pack_cli.py  test_summarize_qwenguard_trials_cli.py  test_swarm_demo_bundle_cli.py  (+13 more)
(+6 files in other folders)
