[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "accountable-swarm"
version = "0.1.0"
description = "Accountable edge-cloud robotics demo with deterministic DecisionTrace replay."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Omar Espejel" }
]
dependencies = []

[project.scripts]
run-go-gate = "scripts.run_go_gate:main"
run-camera-go-gate = "scripts.run_camera_go_gate:main"
run-hazard-formation-gate = "scripts.run_hazard_formation_gate:main"
prepare-demo-recording-pack = "scripts.prepare_demo_recording_pack:main"
collect-ecs-smoke-report = "scripts.collect_ecs_smoke_report:main"
verify-trace = "scripts.verify_trace:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accountable_swarm*", "scripts*"]
