[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "accountable-swarm"
version = "0.1.0"
description = "Accountable edge-cloud robotics demo with deterministic DecisionTrace replay."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Omar Espejel" }
]
dependencies = []

[project.scripts]
run-go-gate = "scripts.run_go_gate:main"
run-camera-go-gate = "scripts.run_camera_go_gate:main"
run-hazard-formation-gate = "scripts.run_hazard_formation_gate:main"
prepare-sensor-frame-proof-pack = "scripts.prepare_sensor_frame_proof_pack:main"
capture-so101-camera-frame = "scripts.capture_so101_camera_frame:main"
prepare-so101-operator-probe-pack = "scripts.prepare_so101_operator_probe_pack:main"
prepare-qwenguard-physical-go-pack = "scripts.prepare_qwenguard_physical_go_pack:main"
prepare-qwenguard-submission-pack = "scripts.prepare_qwenguard_submission_pack:main"
audit-qwenguard-submission-readiness = "scripts.audit_qwenguard_submission_readiness:main"
prepare-qwenguard-final-video-review = "scripts.prepare_qwenguard_final_video_review:main"
prepare-qwenguard-readiness-operator-pack = "scripts.prepare_qwenguard_readiness_operator_pack:main"
record-qwenguard-trial = "scripts.record_qwenguard_trial:main"
summarize-qwenguard-trials = "scripts.summarize_qwenguard_trials:main"
prepare-demo-recording-pack = "scripts.prepare_demo_recording_pack:main"
prepare-world-model-dashboard-pack = "scripts.prepare_world_model_dashboard_pack:main"
render-world-model-dashboard-html = "scripts.render_world_model_dashboard_html:main"
prepare-ecs-operator-pack = "scripts.prepare_ecs_operator_pack:main"
prepare-dimos-bridge-pack = "scripts.prepare_dimos_bridge_pack:main"
run-dimos-replay-consumer = "scripts.run_dimos_replay_consumer:main"
collect-dimos-runtime-smoke-report = "scripts.collect_dimos_runtime_smoke_report:main"
prepare-dimos-runtime-smoke-pack = "scripts.prepare_dimos_runtime_smoke_pack:main"
collect-ecs-smoke-report = "scripts.collect_ecs_smoke_report:main"
run-qwenguard-no-motion-health-check = "scripts.run_qwenguard_no_motion_health_check:main"
prepare-so101-training-pack = "scripts.prepare_so101_training_pack:main"
verify-trace = "scripts.verify_trace:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accountable_swarm*", "scripts*"]
